Remove docstrings from the top of the .tml example files, to avoid breakage.

--- a/examples/kitchen_sink/kitchen_sink.tml
+++ b/examples/kitchen_sink/kitchen_sink.tml
@@ -1,5 +1,6 @@
-""" A demonstration of various TraitsML features. """
-
+#
+# A demonstration of various TraitsML features.
+#
 
 from traitsml.constants import Layout, Orientation, SizePolicy, TickPosition
 
