--- a/examples/kitchen_sink/kitchen_sink.tml
+++ b/examples/kitchen_sink/kitchen_sink.tml
@@ -1,11 +1,11 @@
 #------------------------------------------------------------------------------
 # The semantics of the binding operators are as follows:
 #
-#   `=` - Assignment. RHS can be any expression. The assigment will 
+#  `//` - Assignment. RHS can be any expression. The assigment will 
 #         be the default value, but the value can be changed later
 #         through Python code or TML expression execution.
 #
-#  `~~' - Delegation. RHS must be a simple attribute expression, 
+#  `==` - Delegation. RHS must be a simple attribute expression, 
 #         like a.b or a.b.c and so on. Non attribute expressions here
 #         are a syntax error. The value of the view property and value
 #         of the attribute are synched but the type checking of the
@@ -38,22 +38,22 @@ from traitsml.constants import Layout, Orientation, SizePolicy, TickPosition
 
 
 TabGroup main_container:
-    x ~~ model.x
-    y ~~ model.y
-    width ~~ model.width
-    height ~~ model.height
-    movable = True
+    x == model.x
+    y == model.y
+    width == model.width
+    height == model.height
+    movable // True
     tab_names << {first_tab: 'Spam Tab' if tab_name_check.checked else 'Widgets Tab',
                   second_tab: 'Ham Tab' if tab_name_check.checked else 'Plot Tab'}
     VGroup first_tab:
         VGroup child_container:
             Label:
-                text = "Just a Label."
+                text // "Just a Label."
             HGroup:
                 LineEdit:
-                    text ~~ model.button1_text
+                    text == model.button1_text
                 LineEdit line_edit2:
-                    text = "I am button 2..."
+                    text // "I am button 2..."
             HGroup:
                 PushButton button1:
                     # Change the text if the button is pressed
@@ -70,12 +70,12 @@ TabGroup main_container:
             # The base Element type can be used as an empty canvas
             # to allow for the absolute position of child elements.
             # This ability is demonstrated here with the child RadioButton.
-            layout = Layout.ABSOLUTE
-            size_hint = (-1, 50)
-            size_policy = (SizePolicy.IGNORED, SizePolicy.FIXED)
+            layout // Layout.ABSOLUTE
+            size_hint // (-1, 50)
+            size_policy // (SizePolicy.IGNORED, SizePolicy.FIXED)
             RadioButton radiob:
                 width << parent.width
-                height = 50
+                height // 50
                 # The x position of the button in the element is
                 # tied to the y position of the main container.
                 x << int(parent.width * (main_container.y / 1000.0))
@@ -83,86 +83,86 @@ TabGroup main_container:
                 text << "I'm toggled!" if self.checked else "Move the window vertically!"
         HGroup:
             CheckBox tab_name_check:
-                text = "Change Tab Names"
+                text // "Change Tab Names"
             CheckBox button_visible_check:
-                text = "Visibility"
-                checked = True
+                text // "Visibility"
+                checked // True
             CheckBox:
-                text = "check 3"
+                text // "check 3"
             Element:
                 # VGroup and HGroup are just convience elements. The layout
                 # is a property on all Elements which can be modified.
                 layout << Layout.VERTICAL if vert.checked else Layout.HORIZONTAL
                 RadioButton horiz:
-                    text = "horizontal layout"
-                    checked = True
+                    text // "horizontal layout"
+                    checked // True
                 RadioButton vert:
-                    text = "vertical layout"
+                    text // "vertical layout"
             CheckBox:
-                text = "check 4"
+                text // "check 4"
         GroupBox:
-            title = "Foo Group"
-            checkable = True
-            layout = Layout.VERTICAL
+            title // "Foo Group"
+            checkable // True
+            layout // Layout.VERTICAL
             Form my_form:
                 Label:
-                    text = "A Label"
+                    text // "A Label"
                 Field my_field:
-                    value = "What"
+                    value // "What"
                 Label:
-                    text = "Another Label"
+                    text // "Another Label"
                 Field:
-                    value = "Another Value"
+                    value // "Another Value"
                 Label:
                     visible << fourth_val.value == 'fifth' 
-                    text = "Third"
+                    text // "Third"
                 Field:
-                    value = "Third value"
+                    value // "Third value"
                 Label:
-                    text = "Type 'fifth' to show third"
+                    text // "Type 'fifth' to show third"
                 Field fourth_val:
-                    value = ""
+                    value // ""
         HGroup:
             VGroup:
-                size_policy = (SizePolicy.MAXIMUM, SizePolicy.DEFAULT)
-                size_hint = (100, -1)
+                size_policy // (SizePolicy.MAXIMUM, SizePolicy.DEFAULT)
+                size_hint // (100, -1)
                 RadioButton vert_button:
-                    text = "Vertical"
-                    checked = True
+                    text // "Vertical"
+                    checked // True
                 RadioButton:
-                    text = "Horizontal"
+                    text // "Horizontal"
                 CheckBox tick_box:
-                    text = "Show Ticks"
+                    text // "Show Ticks"
             Slider my_slider:
-                size_policy = (SizePolicy.IGNORED, SizePolicy.DEFAULT)
-                value = 0
-                to_slider = lambda val: val / 10.0
-                from_slider = lambda pos: int(pos * 10.0)
-                tick_interval = 0.2
+                size_policy // (SizePolicy.IGNORED, SizePolicy.DEFAULT)
+                value // 0
+                to_slider // lambda val: val / 10.0
+                from_slider // lambda pos: int(pos * 10.0)
+                tick_interval // 0.2
                 orientation << Orientation.VERTICAL if vert_button.checked else Orientation.HORIZONTAL
                 tick_pos << TickPosition.BOTH_SIDES if tick_box.checked else TickPosition.DEFAULT
                 value >> print(self.value)
             Label:
                 text << str(my_slider.value)
     TraitsUIItem second_tab:
-        model = plot_ui
+        model // plot_ui
 
 
 # TODO make some Dialog elements so we don't have to fake it like this.
 VGroup dialog:
-    width = 200   
-    height = 100  
+    width // 200   
+    height // 100  
     Label:
-        text = "Just some radio buttons"
+        text // "Just some radio buttons"
     HGroup:
         RadioButton:
-            text = "Radio 1"
+            text // "Radio 1"
         RadioButton:
-            text = "Radio 2"
+            text // "Radio 2"
         RadioButton:
-            text = "Radio 4"
+            text // "Radio 4"
     PushButton:
-        text = "Ok"
+        text // "Ok"
         clicked >> controller.close_dialog()
 
 
