--- a/examples/simple/simple.tml
+++ b/examples/simple/simple.tml
@@ -5,7 +5,7 @@
 #         be the default value, but the value can be changed later
 #         through Python code or TML expression execution.
 #
-#  `~~' - Delegation. RHS must be a simple attribute expression, 
+#  `:=' - Delegation. RHS must be a simple attribute expression, 
 #         like a.b or a.b.c and so on. Non attribute expressions here
 #         are a syntax error. The value of the view property and value
 #         of the attribute are synched but the type checking of the
@@ -36,33 +36,33 @@
 #------------------------------------------------------------------------------
 from PySide import QtGui
 
-from traitsml.constants import Color
+from traitsml.enums import Color
 
 
 VGroup main_container:
-    width // 200
-    height // 200
+    width = 200
+    height = 200
     Form:
         Label:
-            text // "Name:"
+            text = "Name:"
         Field:
-            value == model.name
-            to_string // lambda text: text.upper()
-            from_string // lambda text: text.lower()
+            value := model.name
+            to_string = lambda text: text.upper()
+            from_string = lambda text: text.lower()
         Label my_label:
-            text // "Age:"
+            text = "Age:"
             bgcolor << Color.ERROR if age_field.error else Color.DEFAULT
         Field age_field:
-            value == model.age
-            from_string // int
+            value := model.age
+            from_string = int
         Label:
-            text // "Weight:"
+            text = "Weight:"
         Field:
-            value == model.weight
+            value := model.weight
             bgcolor << Color.ERROR if self.error else Color.DEFAULT
-            from_string // float
+            from_string = float
     PushButton:
-        text // "Quit"
+        text = "Quit"
         clicked >> QtGui.qApp.quit()
 
 
