--- a/docs/source/enthought_doc/static/enthought_doc.css
+++ b/docs/source/enthought_doc/static/enthought_doc.css
@@ -125,7 +125,7 @@ dt:target,
     background-color: #fbe54e;
 }
 
-dl.class, dl.function {
+dl.class, dl.function, dl.enaml_decl, dl.enaml_defn {
     border-top: 2px solid #888;
 }
 
