--- a/enaml/qt/editor/editor.css
+++ b/enaml/qt/editor/editor.css
@@ -20,10 +20,19 @@ body {
 	margin: 0;
 }
 
+#add_button {
+	float: right;
+	background: none;
+	border: none;
+	font-size: 1.2em;
+	
+}
+
 #tab_list {
+	float: left;
 	margin: 0;
 	padding: 0;
-	width: 100%;
+	width: 96%;
 	list-style-type: none;
 	display: table;
 }
@@ -47,7 +56,7 @@ body {
 }
 
 #tab_list li button {
-	text-shadow:0 -1px 1px rgba(0,0,0,0.5);
+
 	background: none;
 	border: none;
 	margin: 0 0 0 5px;
