--- a/enaml/qt/editor/editor.css
+++ b/enaml/qt/editor/editor.css
@@ -18,6 +18,7 @@ body {
 #tabs {
 	width: 100%;
 	margin: 0;
+	float: left;
 }
 
 #add_button {
@@ -44,7 +45,6 @@ body {
 	background-color: gray;
 	border-radius: 10px 10px 0 0;
 	padding: 5px 10px 5px 10px;
-	margin: 0 1px 0 0;
 }
 
 #tab_list li:last_child {
