--- a/enaml/qt/editor/editor.css
+++ b/enaml/qt/editor/editor.css
@@ -1,12 +1,16 @@
+/*----------------------------------------------------------------------------*/
+/*  Copyright (c) 2012, Enthought, Inc.                                       */
+/*  All rights reserved.                                                      */
+/*----------------------------------------------------------------------------*/
 body {
-    background-color: white; /* Fallback if rgba is not supported */
-    background-color: rgba(0, 0, 0, 0);
+    background: transparent;
 }
 
 .container {
     margin: 0;
     padding: 0;
     display: inline-block;
+    position: relative;
 }
 
 .container button:active {
@@ -21,27 +25,34 @@ body {
     border: none;
     font-size: 1.2em;
     position: absolute;
+    z-index: 99;
+    top: 2px;
 }
 
 .tabs {
-    height: 1.8em;
-    overflow: hidden;
+    height: 2em;
     margin: 0;
     padding: 0;
     width: 94%;
-    display: inline-block;
+    display: inline-table;
+    table-layout: fixed;
 }
 
 .tabs div {
-    border-bottom: 1px solid #000;
-    border-top: 1px solid #000;
-    border-right: 1px solid #000;
+    border: 1px solid #000;
+    border-left: none;
     background-color: gray;
     border-radius: 10px 10px 0 0;
     padding: 5px 10px 5px 10px;
-    margin: 0;
     color: #000;
-    display: inline-block;
+    display: table-cell;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.tabs div:first-child {
+    border-left: 1px solid #000;
 }
 
 .tabs div:hover {
@@ -56,9 +67,9 @@ body {
 .tabs div button {
     border: none;
     background: none;
-    margin: 0 0 0 5px;
-    padding: 0;
     float: right;
+    padding: 0;
+    margin: 0;
 }
 
 .tabs div.current button {
