--- a/enaml/qt/editor/editor.css
+++ b/enaml/qt/editor/editor.css
@@ -13,10 +13,6 @@ body {
     position: relative;
 }
 
-.container button:active {
-    text-shadow: 0 -1px 1px rgba(0,0,0,0.5);
-}
-
 .add_button {
     margin: 0;
     padding: 0;
@@ -28,8 +24,12 @@ body {
     position: absolute;
 }
 
+.add_button:active {
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.5);
+}
+
 .tabs {
-    height: 1.5em;
+    height: 27px;
     display: inline-block;
     width: 94%;
     font-size: 0.8em;
@@ -38,48 +38,49 @@ body {
 .tabs div {
     position: relative;
     display: inline-block;
-    border: 1px solid #000;
-    border-left: none;
-    background-color: gray;
-    border-radius: 10px 10px 0 0;
-    padding: 5px 10px 5px 10px;
     color: #000;
     white-space: nowrap;
     overflow: hidden;
     max-width: 150px;
-}
-
-.tabs div:first-child {
-    border-left: 1px solid #000;
+    background-image: url(tab.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 27px;
+    line-height: 27px;
+    vertical-align: middle;
 }
 
 .tabs div:hover {
     cursor: default;
 }
 
-.tabs div.current {
-    background-color: #000;
+.tabs .current {
     color: #fff;
+    background-image: url(tab_current.png);
 }
 
 .tabs div span {
-    margin-right: 13px;
+    margin: 0 13px 0 12px;
 }
 
 .tabs div button {
     position: absolute;
-    top: 0;
-    right: 2px;
+    top: 6px;
+    right: 11px;
+    border: none;
+    background: transparent;
+    background-image: url(close.png);
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
     padding: 0;
-}
-
-.tabs div.current button:active {
-    text-shadow: 0 -1px 1px rgba(255,255,255,0.5);
+    color: #ccc;
 }
 
 .placeholder {
-    display: inline !important;
-    background-color: gray;
-    opacity: 0.2;
-    border: none;
+    opacity: 0.5;
+}
+
+.ui-sortable-helper {
+    opacity: 1 !important;
 }
